--- a/src/drip_vs2005.vcproj
+++ b/src/drip_vs2005.vcproj
@@ -306,6 +306,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\UnitTests\stdafx.h"
+				>
+			</File>
+			<File
 				RelativePath=".\NanoCppUnit\test.h"
 				>
 			</File>
