--- a/src/drip_vs2005.vcproj
+++ b/src/drip_vs2005.vcproj
@@ -302,6 +302,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\NanoCppUnit\stdafx.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
