--- a/src/drip.vcproj
+++ b/src/drip.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;TEST"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -138,7 +138,13 @@
 				RelativePath=".\MainBrowserDlg.cpp">
 			</File>
 			<File
+				RelativePath=".\UnitTests\MemoryUsageTest.cpp">
+			</File>
+			<File
 				RelativePath=".\PropDlg.cpp">
+			</File>
+			<File
+				RelativePath=".\NanoCppUnit\test.cpp">
 			</File>
 			<File
 				RelativePath=".\WebBrowser2.cpp">
@@ -155,6 +161,9 @@
 				RelativePath=".\BrowserPopupDlg.hpp">
 			</File>
 			<File
+				RelativePath=".\NanoCppUnit\debug.h">
+			</File>
+			<File
 				RelativePath=".\DlgResizeHelper.h">
 			</File>
 			<File
@@ -167,13 +176,25 @@
 				RelativePath=".\MainBrowserDlg.hpp">
 			</File>
 			<File
+				RelativePath=".\UnitTests\MemoryUsageTest.h">
+			</File>
+			<File
 				RelativePath=".\PropDlg.hpp">
 			</File>
 			<File
 				RelativePath=".\resource.h">
 			</File>
 			<File
+				RelativePath=".\UnitTests\stdafx.h">
+			</File>
+			<File
 				RelativePath=".\stdafx.h">
+			</File>
+			<File
+				RelativePath=".\NanoCppUnit\stdafx.h">
+			</File>
+			<File
+				RelativePath=".\NanoCppUnit\test.h">
 			</File>
 			<File
 				RelativePath=".\WebBrowser2.hpp">
