move the JavaScript for the hook into a resource file
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@35 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.vcproj
+++ b/src/drip.vcproj
@@ -129,6 +129,9 @@
 				RelativePath=".\drip.cpp">
 			</File>
 			<File
+				RelativePath=".\HtmlResource.cpp">
+			</File>
+			<File
 				RelativePath=".\JSHook.cpp">
 			</File>
 			<File
@@ -167,6 +170,9 @@
 				RelativePath=".\DlgResizeHelper.h">
 			</File>
 			<File
+				RelativePath=".\HtmlResource.h">
+			</File>
+			<File
 				RelativePath=".\JSHook.hpp">
 			</File>
 			<File
@@ -185,13 +191,13 @@
 				RelativePath=".\resource.h">
 			</File>
 			<File
+				RelativePath=".\NanoCppUnit\stdafx.h">
+			</File>
+			<File
 				RelativePath=".\UnitTests\stdafx.h">
 			</File>
 			<File
 				RelativePath=".\stdafx.h">
-			</File>
-			<File
-				RelativePath=".\NanoCppUnit\stdafx.h">
 			</File>
 			<File
 				RelativePath=".\NanoCppUnit\test.h">
@@ -204,6 +210,9 @@
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			<File
+				RelativePath=".\res\drip.js">
+			</File>
 			<File
 				RelativePath=".\drip.rc">
 			</File>
