add toggle for all/recent DOM leaks
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@42 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.rc
+++ b/src/drip.rc
@@ -99,15 +99,19 @@ END
 IDD_LEAKS DIALOGEX 0, 0, 434, 217
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU | WS_THICKFRAME
-CAPTION "DOM Element Leaks"
+CAPTION "DOM Leaks"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LEAKLIST,"SysListView32",LVS_REPORT | 
                     LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | 
-                    WS_TABSTOP,7,7,364,203,WS_EX_CLIENTEDGE
-    DEFPUSHBUTTON   "&Properties",IDC_PROPERTIES_BUTTON,377,7,50,14
-    PUSHBUTTON      "&Copy",IDC_COPY,377,23,50,14
-    PUSHBUTTON      "Close",IDOK,377,39,50,14,0,WS_EX_RTLREADING
+                    WS_TABSTOP,7,21,364,188,WS_EX_CLIENTEDGE
+    DEFPUSHBUTTON   "&Properties",IDC_PROPERTIES_BUTTON,377,21,50,14
+    PUSHBUTTON      "&Copy",IDC_COPY,377,37,50,14
+    PUSHBUTTON      "Close",IDOK,377,53,50,14,0,WS_EX_RTLREADING
+    CONTROL         "Show &All DOM Leaks",IDC_SHOW_ALL_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,7,7,80,10
+    CONTROL         "Show &Recent DOM Leaks",IDC_SHOW_RECENT_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,90,7,95,10
 END
 
 IDD_PROPERTIES DIALOGEX 0, 0, 348, 302
@@ -156,7 +160,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 427
         TOPMARGIN, 7
-        BOTTOMMARGIN, 210
+        BOTTOMMARGIN, 209
     END
 
     IDD_PROPERTIES, DIALOG
