genericize leak dialog
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@43 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.vcproj
+++ b/src/drip.vcproj
@@ -135,7 +135,7 @@
 				RelativePath=".\JSHook.cpp">
 			</File>
 			<File
-				RelativePath=".\LeakDlg.cpp">
+				RelativePath=".\DOMReportDlg.cpp">
 			</File>
 			<File
 				RelativePath=".\MainBrowserDlg.cpp">
@@ -176,7 +176,7 @@
 				RelativePath=".\JSHook.hpp">
 			</File>
 			<File
-				RelativePath=".\LeakDlg.hpp">
+				RelativePath=".\DOMReportDlg.hpp">
 			</File>
 			<File
 				RelativePath=".\MainBrowserDlg.hpp">
