--- a/src/drip_vs2005.vcproj
+++ b/src/drip_vs2005.vcproj
@@ -211,7 +211,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\LeakDlg.cpp"
+				RelativePath=".\DOMReportDlg.cpp"
 				>
 			</File>
 			<File
@@ -294,7 +294,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\LeakDlg.hpp"
+				RelativePath=".\DOMReportDlg.hpp"
 				>
 			</File>
 			<File
