add "Show DOM Usage" button
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@44 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.rc
+++ b/src/drip.rc
@@ -82,15 +82,16 @@ BEGIN
     PUSHBUTTON      "<-",IDC_BACK,7,7,14,13
     PUSHBUTTON      "->",IDC_FORWARD,22,7,14,13
     LTEXT           "A&ddress:",IDC_ADDRESS_STATIC,40,9,28,8
-    EDITTEXT        IDC_EDITURL,70,7,406,13,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "Go",IDC_GO,479,7,25,13
-    PUSHBUTTON      "Check Leaks",IDC_CHECKLEAKS,505,7,54,13
-    CTEXT           "Current Memory Usage:",IDC_TOTALMEMLABEL,566,7,75,8
-    EDITTEXT        IDC_CURRENT_MEMORY_EDIT,568,16,73,12,ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_EDITURL,70,7,460,13,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Go",IDC_GO,534,7,25,13
+    PUSHBUTTON      "Show DOM Usage",IDC_CHECKUSAGE,566,7,75,13
+    PUSHBUTTON      "Show DOM Leaks",IDC_CHECKLEAKS,566,23,75,13
+    CTEXT           "Memory Usage:",IDC_TOTALMEMLABEL,578,39,50,8
+    EDITTEXT        IDC_CURRENT_MEMORY_EDIT,566,48,75,12,ES_AUTOHSCROLL | 
                     ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "Auto-Refresh",IDC_AUTOREFRESH,568,33,73,13
-    CTEXT           "Memory Samples:",IDC_MEMLABEL,575,49,56,8
-    LISTBOX         IDC_MEMLIST,568,58,73,265,LBS_NOINTEGRALHEIGHT | 
+    PUSHBUTTON      "Auto-Refresh Page",IDC_AUTOREFRESH,566,64,75,13
+    CTEXT           "Memory Samples:",IDC_MEMLABEL,575,80,56,8
+    LISTBOX         IDC_MEMLIST,566,89,75,234,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL
     CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",
                     WS_TABSTOP,7,24,552,299
@@ -99,7 +100,7 @@ END
 IDD_LEAKS DIALOGEX 0, 0, 434, 217
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU | WS_THICKFRAME
-CAPTION "DOM Leaks"
+CAPTION "DOM _____"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LEAKLIST,"SysListView32",LVS_REPORT | 
@@ -108,10 +109,10 @@ BEGIN
     DEFPUSHBUTTON   "&Properties",IDC_PROPERTIES_BUTTON,377,21,50,14
     PUSHBUTTON      "&Copy",IDC_COPY,377,37,50,14
     PUSHBUTTON      "Close",IDOK,377,53,50,14,0,WS_EX_RTLREADING
-    CONTROL         "Show &All DOM Leaks",IDC_SHOW_ALL_RADIO,"Button",
-                    BS_AUTORADIOBUTTON,7,7,80,10
-    CONTROL         "Show &Recent DOM Leaks",IDC_SHOW_RECENT_RADIO,"Button",
-                    BS_AUTORADIOBUTTON,90,7,95,10
+    CONTROL         "Show &All DOM _____",IDC_SHOW_ALL_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,7,7,82,10
+    CONTROL         "Show &Recent DOM _____",IDC_SHOW_RECENT_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,90,7,97,10
 END
 
 IDD_PROPERTIES DIALOGEX 0, 0, 348, 302
