show number of DOM references in real time
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@48 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.rc
+++ b/src/drip.rc
@@ -84,14 +84,17 @@ BEGIN
     LTEXT           "A&ddress:",IDC_ADDRESS_STATIC,40,9,28,8
     EDITTEXT        IDC_EDITURL,70,7,460,13,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "Go",IDC_GO,534,7,25,13
-    PUSHBUTTON      "Show DOM Usage",IDC_CHECKUSAGE,566,7,75,13
-    PUSHBUTTON      "Show DOM Leaks",IDC_CHECKLEAKS,566,23,75,13
-    CTEXT           "Memory Usage:",IDC_TOTALMEMLABEL,578,39,50,8
-    EDITTEXT        IDC_CURRENT_MEMORY_EDIT,566,48,75,12,ES_AUTOHSCROLL | 
+    LTEXT           "Total DOM Nodes:",IDC_TOTALDOMNODES_STATIC,573,7,60,8
+    EDITTEXT        IDC_CURRENT_DOM_NODES_EDIT,566,16,75,12,ES_AUTOHSCROLL | 
                     ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "Auto-Refresh Page",IDC_AUTOREFRESH,566,64,75,13
-    CTEXT           "Memory Samples:",IDC_MEMLABEL,575,80,56,8
-    LISTBOX         IDC_MEMLIST,566,89,75,234,LBS_NOINTEGRALHEIGHT | 
+    PUSHBUTTON      "Show DOM Usage",IDC_CHECKUSAGE,566,32,75,13
+    PUSHBUTTON      "Show DOM Leaks",IDC_CHECKLEAKS,566,48,75,13
+    CTEXT           "Memory Usage:",IDC_TOTALMEMLABEL,578,64,50,8
+    EDITTEXT        IDC_CURRENT_MEMORY_EDIT,566,73,75,12,ES_AUTOHSCROLL | 
+                    ES_READONLY | NOT WS_TABSTOP
+    PUSHBUTTON      "Auto-Refresh Page",IDC_AUTOREFRESH,566,88,75,13
+    CTEXT           "Memory Samples:",IDC_MEMLABEL,575,103,56,8
+    LISTBOX         IDC_MEMLIST,566,113,75,210,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL
     CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",
                     WS_TABSTOP,7,24,552,299
