UI improvements: update URL on navigation
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@56 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.rc
+++ b/src/drip.rc
@@ -87,12 +87,12 @@ BEGIN
     LTEXT           "Total DOM Nodes:",IDC_TOTALDOMNODES_STATIC,573,7,60,8
     EDITTEXT        IDC_CURRENT_DOM_NODES_EDIT,566,16,75,12,ES_AUTOHSCROLL | 
                     ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "Show DOM Usage",IDC_CHECKUSAGE,566,32,75,13
-    PUSHBUTTON      "Show DOM Leaks",IDC_CHECKLEAKS,566,48,75,13
+    PUSHBUTTON      "Show DOM &Usage",IDC_CHECKUSAGE,566,32,75,13
+    PUSHBUTTON      "Show DOM &Leaks",IDC_CHECKLEAKS,566,48,75,13
     CTEXT           "Memory Usage:",IDC_TOTALMEMLABEL,578,64,50,8
     EDITTEXT        IDC_CURRENT_MEMORY_EDIT,566,73,75,12,ES_AUTOHSCROLL | 
                     ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "Auto-Refresh Page",IDC_AUTOREFRESH,566,88,75,13
+    PUSHBUTTON      "&Auto-Refresh Page",IDC_AUTOREFRESH,566,88,75,13
     CTEXT           "Memory Samples:",IDC_MEMLABEL,575,103,56,8
     LISTBOX         IDC_MEMLIST,566,113,75,210,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL
