add real-time memory usage graph
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@64 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/drip.rc
+++ b/src/drip.rc
@@ -94,10 +94,11 @@ BEGIN
                     ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "&Auto-Refresh Page",IDC_AUTOREFRESH,566,88,75,13
     CTEXT           "Memory Samples:",IDC_MEMLABEL,575,103,56,8
-    LISTBOX         IDC_MEMLIST,566,113,75,210,LBS_NOINTEGRALHEIGHT | 
+    LISTBOX         IDC_MEMLIST,566,113,75,144,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL
     CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",
-                    WS_TABSTOP,7,24,552,299
+                    WS_TABSTOP,7,24,552,233
+    LTEXT           "Static",IDC_GRAPH_STATIC,7,263,634,60
 END
 
 IDD_LEAKS DIALOGEX 0, 0, 434, 217
@@ -157,6 +158,7 @@ BEGIN
         RIGHTMARGIN, 641
         TOPMARGIN, 7
         BOTTOMMARGIN, 323
+        HORZGUIDE, 257
     END
 
     IDD_LEAKS, DIALOG
@@ -191,7 +193,7 @@ END
 IDD_BROWSER_DIALOG DLGINIT
 BEGIN
     IDC_EXPLORER, 0x376, 160, 0
-0x0000, 0x0000, 0x004c, 0x0000, 0x5594, 0x0000, 0x323b, 0x0000, 0x0000, 
+0x0000, 0x0000, 0x004c, 0x0000, 0x5594, 0x0000, 0x272c, 0x0000, 0x0000, 
 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 
 0x0000, 0x0000, 0x004c, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0001, 
 0x0000, 0xd0e0, 0x0057, 0x3573, 0x11cf, 0x69ae, 0x0008, 0x2e2b, 0x6212, 
