Forgot to add this header (Currently excluded from build)
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@73 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/sieve/src/sIEve.vcproj
+++ b/sieve/src/sIEve.vcproj
@@ -201,10 +201,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\dbgint.h"
-				>
-			</File>
-			<File
 				RelativePath=".\DlgResizeHelper.h"
 				>
 			</File>
@@ -352,6 +348,26 @@
 		<Filter
 			Name="Files Exluded From Build"
 			>
+			<File
+				RelativePath=".\dbgint.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
 			<File
 				RelativePath=".\ListCtrlEx.cpp"
 				>
