add series for DOM node usage and allow mouse-hover to find specific details about memory usage (now uses generic MemDCCtrl with a separate graph control responsible for all updating, as well as a context menu to control update speed)
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@92 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/drip/src/drip.vcproj
+++ b/drip/src/drip.vcproj
@@ -144,6 +144,9 @@
 				RelativePath=".\MainBrowserDlg.cpp">
 			</File>
 			<File
+				RelativePath=".\MemoryGraphCtrl.cpp">
+			</File>
+			<File
 				RelativePath=".\UnitTests\MemoryUsageTest.cpp">
 			</File>
 			<File
@@ -188,6 +191,15 @@
 				RelativePath=".\MainBrowserDlg.hpp">
 			</File>
 			<File
+				RelativePath=".\MemDCCtrl.cpp">
+			</File>
+			<File
+				RelativePath=".\MemDCCtrl.h">
+			</File>
+			<File
+				RelativePath=".\MemoryGraphCtrl.h">
+			</File>
+			<File
 				RelativePath=".\UnitTests\MemoryUsageTest.h">
 			</File>
 			<File
@@ -197,13 +209,13 @@
 				RelativePath=".\resource.h">
 			</File>
 			<File
-				RelativePath=".\UnitTests\stdafx.h">
+				RelativePath=".\NanoCppUnit\stdafx.h">
 			</File>
 			<File
 				RelativePath=".\stdafx.h">
 			</File>
 			<File
-				RelativePath=".\NanoCppUnit\stdafx.h">
+				RelativePath=".\UnitTests\stdafx.h">
 			</File>
 			<File
 				RelativePath=".\NanoCppUnit\test.h">
