only show one graph series at a time; current series can be toggled through the context menu
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@96 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/drip/src/drip.rc
+++ b/drip/src/drip.rc
@@ -283,15 +283,13 @@ IDR_GRAPH_MENU MENU
 BEGIN
     POPUP "Graph Menu"
     BEGIN
-        POPUP "&Update Speed"
-        BEGIN
-            MENUITEM "&High",                       ID_GRAPHUPDATESPEED_HIGH
-            MENUITEM "&Normal",                     ID_GRAPHUPDATESPEED_NORMAL
-
-            MENUITEM "&Low",                        ID_GRAPHUPDATESPEED_LOW
-            MENUITEM "&Paused",                     ID_GRAPHUPDATESPEED_PAUSED
-
-        END
+        MENUITEM "Show &Memory Usage",          ID_GRAPH_SHOW_MEMORY
+        MENUITEM "Show &DOM Nodes",             ID_GRAPH_SHOW_DOM
+        MENUITEM SEPARATOR
+        MENUITEM "&High",                       ID_GRAPHUPDATESPEED_HIGH
+        MENUITEM "&Normal",                     ID_GRAPHUPDATESPEED_NORMAL
+        MENUITEM "&Low",                        ID_GRAPHUPDATESPEED_LOW
+        MENUITEM "&Paused",                     ID_GRAPHUPDATESPEED_PAUSED
     END
 END
 
