--- a/drip/src/drip_vs2005.vcproj
+++ b/drip/src/drip_vs2005.vcproj
@@ -223,6 +223,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MemDCCtrl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MemoryGraphCtrl.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\UnitTests\MemoryUsageTest.cpp"
 				>
 				<FileConfiguration
@@ -306,6 +314,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MemDCCtrl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MemoryGraphCtrl.h"
+				>
+			</File>
+			<File
 				RelativePath=".\UnitTests\MemoryUsageTest.h"
 				>
 			</File>
@@ -322,11 +338,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\NanoCppUnit\stdafx.h"
+				RelativePath=".\UnitTests\stdafx.h"
 				>
 			</File>
 			<File
-				RelativePath=".\UnitTests\stdafx.h"
+				RelativePath=".\NanoCppUnit\stdafx.h"
 				>
 			</File>
 			<File
