- Added some controls to several dialogs to support the Cross Ref scanning
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@107 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/sieve/src/sIEve.rc
+++ b/sieve/src/sIEve.rc
@@ -85,12 +85,12 @@ BEGIN
     DEFPUSHBUTTON   "Go",IDC_GO,435,7,25,13
     PUSHBUTTON      "about:blank",IDC_ABOUTBLANK,550,46,66,14
     PUSHBUTTON      "Auto-Refresh",IDC_AUTOREFRESH,466,7,54,13
-    CTEXT           "Memory samples (KB)             Registered Items (#)",IDC_MEMLABEL,529,78,163,8
+    CTEXT           "Memory samples (KB)             Registered Items (#)",IDC_MEMLABEL,529,93,163,8
     CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",WS_TABSTOP,7,26,513,375
     PUSHBUTTON      "Clear in use",IDC_CLEAR_IN_USE,626,7,66,14
     PUSHBUTTON      "Show in use",IDC_SHOW_IN_USE,626,26,66,14
-    CONTROL         "",IDC_MEMSAMPLES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER,529,90,163,386,WS_EX_CLIENTEDGE
-    CONTROL         "Automatic memory cleanup",IDC_CHECK_AUTO_CLEANUP,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,550,64,98,10
+    CONTROL         "",IDC_MEMSAMPLES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER,529,104,163,372,WS_EX_CLIENTEDGE
+    CONTROL         "Automatic memory cleanup",IDC_CHECK_AUTO_CLEANUP,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,550,78,98,10
     PUSHBUTTON      "Show Leaks",IDC_SHOW_LEAKS,626,46,66,14
     PUSHBUTTON      "Help",IDC_SHOW_HELP,550,7,66,14
     PUSHBUTTON      "Log Defect",IDC_LOG_DEFECT,550,26,66,14
@@ -101,29 +101,31 @@ BEGIN
     CONTROL         "Paused",IDC_RADIO_PAUSED,"Button",BS_AUTORADIOBUTTON,469,408,36,10
     CONTROL         "Max (MB)    ",IDC_STATIC_MAX,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,15,419,32,8
     CONTROL         "Min (MB)     ",IDC_STATIC_MIN,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,15,459,32,8
+    CONTROL         "Cycle Detection",IDC_CHECK_CYCLE_DETECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,550,67,67,10
+    PUSHBUTTON      "Scan Now !",IDC_CROSSREF_SCAN,626,66,66,14
 END
 
-IDD_LEAKS DIALOGEX 500, 500, 574, 373
+IDD_LEAKS DIALOGEX 500, 500, 688, 373
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Elements in use"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "&Properties",IDC_PROPERTIES_BUTTON,507,7,60,14
-    PUSHBUTTON      "&Copy",IDC_COPY,507,24,60,14
-    PUSHBUTTON      "Close",IDOK,507,345,60,14,0,WS_EX_RTLREADING
-    LTEXT           "# Items",IDC_STATIC_ITEMS,507,110,60,8
-    EDITTEXT        IDC_EDIT_HIDDEN_ITEMS,507,153,60,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_DISABLED,WS_EX_CLIENTEDGE
-    PUSHBUTTON      "Clear in use",IDC_CLEAR,507,41,60,14,0,WS_EX_RTLREADING
-    PUSHBUTTON      "Show in use",IDC_REFRESH,507,59,60,14,0,WS_EX_RTLREADING
-    LTEXT           "New item",IDC_STATIC_RED,499,292,68,8,0,WS_EX_RIGHT
-    LTEXT           "Increased refcount",IDC_STATIC_BLUE,499,314,68,8,0,WS_EX_RIGHT
-    LTEXT           "No change",IDC_STATIC_BLACK,499,303,68,8,0,WS_EX_RIGHT
-    LTEXT           "Decreased refcount",IDC_STATIC_GREEN,499,325,68,8,0,WS_EX_RIGHT
-    LTEXT           "# Hidden items",IDC_STATIC_HIDDEN_ITEMS,507,142,60,8,NOT WS_VISIBLE | WS_DISABLED
-    EDITTEXT        IDC_EDIT_ITEMS,507,121,60,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_LEAKLIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,491,359,WS_EX_CLIENTEDGE
-    CONTROL         "Show all",IDC_CHECK_SHOW_ALL,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,507,168,60,10
-    PUSHBUTTON      "Show leaks",IDC_REFRESH_LEAKS,507,77,60,14,0,WS_EX_RTLREADING
+    DEFPUSHBUTTON   "&Properties",IDC_PROPERTIES_BUTTON,621,7,60,14
+    PUSHBUTTON      "&Copy",IDC_COPY,621,24,60,14
+    PUSHBUTTON      "Close",IDOK,621,345,60,14,0,WS_EX_RTLREADING
+    LTEXT           "# Items",IDC_STATIC_ITEMS,621,110,60,8
+    EDITTEXT        IDC_EDIT_HIDDEN_ITEMS,621,153,60,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_DISABLED,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Clear in use",IDC_CLEAR,621,41,60,14,0,WS_EX_RTLREADING
+    PUSHBUTTON      "Show in use",IDC_REFRESH,621,59,60,14,0,WS_EX_RTLREADING
+    LTEXT           "New item",IDC_STATIC_RED,613,292,68,8,0,WS_EX_RIGHT
+    LTEXT           "Increased refcount",IDC_STATIC_BLUE,613,314,68,8,0,WS_EX_RIGHT
+    LTEXT           "No change",IDC_STATIC_BLACK,613,303,68,8,0,WS_EX_RIGHT
+    LTEXT           "Decreased refcount",IDC_STATIC_GREEN,613,325,68,8,0,WS_EX_RIGHT
+    LTEXT           "# Hidden items",IDC_STATIC_HIDDEN_ITEMS,621,142,60,8,NOT WS_VISIBLE | WS_DISABLED
+    EDITTEXT        IDC_EDIT_ITEMS,621,121,60,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_LEAKLIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,604,359,WS_EX_CLIENTEDGE
+    CONTROL         "Show all",IDC_CHECK_SHOW_ALL,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,621,168,60,10
+    PUSHBUTTON      "Show leaks",IDC_REFRESH_LEAKS,621,77,60,14,0,WS_EX_RTLREADING
 END
 
 IDD_PROPERTIES DIALOGEX 0, 0, 348, 302
@@ -165,7 +167,7 @@ BEGIN
     IDD_LEAKS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 567
+        RIGHTMARGIN, 681
         TOPMARGIN, 7
         BOTTOMMARGIN, 366
     END
@@ -228,8 +230,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,0,4,0
- PRODUCTVERSION 0,0,4,0
+ FILEVERSION 0,0,5,0
+ PRODUCTVERSION 0,0,5,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -247,12 +249,12 @@ BEGIN
             VALUE "Comments", "Based on Drip 0.3"
             VALUE "CompanyName", "Cordys"
             VALUE "FileDescription", "sIEve"
-            VALUE "FileVersion", "0, 0, 4, 0"
+            VALUE "FileVersion", "0, 0, 5, 0"
             VALUE "InternalName", "sIEve"
             VALUE "LegalCopyright", "Copyright (c) 2005, 2006"
             VALUE "OriginalFilename", "sIEve.exe"
             VALUE "ProductName", "sIEve"
-            VALUE "ProductVersion", "0, 0, 4, 0"
+            VALUE "ProductVersion", "0, 0, 5, 0"
         END
     END
     BLOCK "VarFileInfo"
