- Remove DlgResizeHelper.h - Add EasySize.h for EASYSIZE (Better implementation to support autoresize of controls)
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@109 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/sieve/src/sIEve.vcproj
+++ b/sieve/src/sIEve.vcproj
@@ -201,7 +201,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\DlgResizeHelper.h"
+				RelativePath=".\EasySize.h"
 				>
 			</File>
 			<File
@@ -301,10 +301,6 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\DlgResizeHelper.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\Graph.cpp"
 				>
 			</File>
@@ -350,6 +346,46 @@
 			>
 			<File
 				RelativePath=".\dbgint.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\ListCtrlEx.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\ListCtrlEx.h"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
