remove memory/DOM usage text boxes and list box in favor of graph
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@110 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/drip/src/drip.rc
+++ b/drip/src/drip.rc
@@ -84,21 +84,12 @@ BEGIN
     LTEXT           "A&ddress:",IDC_ADDRESS_STATIC,40,9,28,8
     EDITTEXT        IDC_EDITURL,70,7,460,13,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "Go",IDC_GO,534,7,25,13
-    LTEXT           "Total DOM Nodes:",IDC_TOTALDOMNODES_STATIC,573,7,60,8
-    EDITTEXT        IDC_CURRENT_DOM_NODES_EDIT,566,16,75,12,ES_AUTOHSCROLL | 
-                    ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "Show DOM &Usage",IDC_CHECKUSAGE,566,32,75,13
-    PUSHBUTTON      "Show DOM &Leaks",IDC_CHECKLEAKS,566,48,75,13
-    CTEXT           "Memory Usage:",IDC_TOTALMEMLABEL,578,64,50,8
-    EDITTEXT        IDC_CURRENT_MEMORY_EDIT,566,73,75,12,ES_AUTOHSCROLL | 
-                    ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "&Auto-Refresh Page",IDC_AUTOREFRESH,566,88,75,13
-    CTEXT           "Memory Samples:",IDC_MEMLABEL,575,103,56,8
-    LISTBOX         IDC_MEMLIST,566,113,75,144,LBS_NOINTEGRALHEIGHT | 
-                    WS_VSCROLL
+    PUSHBUTTON      "Show DOM &Usage",IDC_CHECKUSAGE,566,263,75,13
+    PUSHBUTTON      "Show DOM &Leaks",IDC_CHECKLEAKS,566,279,75,13
+    PUSHBUTTON      "&Auto-Refresh Page",IDC_AUTOREFRESH,566,7,75,13
     CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",
-                    WS_TABSTOP,7,24,552,233
-    LTEXT           "Static",IDC_GRAPH_STATIC,7,263,634,60
+                    WS_TABSTOP,7,24,634,233
+    LTEXT           "Static",IDC_GRAPH_STATIC,7,263,552,60
 END
 
 IDD_LEAKS DIALOGEX 0, 0, 434, 217
@@ -156,9 +147,11 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 641
+        VERTGUIDE, 559
         TOPMARGIN, 7
         BOTTOMMARGIN, 323
         HORZGUIDE, 257
+        HORZGUIDE, 263
     END
 
     IDD_LEAKS, DIALOG
@@ -193,7 +186,7 @@ END
 IDD_BROWSER_DIALOG DLGINIT
 BEGIN
     IDC_EXPLORER, 0x376, 160, 0
-0x0000, 0x0000, 0x004c, 0x0000, 0x5594, 0x0000, 0x272c, 0x0000, 0x0000, 
+0x0000, 0x0000, 0x004c, 0x0000, 0x624a, 0x0000, 0x272c, 0x0000, 0x0000, 
 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 
 0x0000, 0x0000, 0x004c, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0001, 
 0x0000, 0xd0e0, 0x0057, 0x3573, 0x11cf, 0x69ae, 0x0008, 0x2e2b, 0x6212, 
