- Merged new MemoryUsage / Dom Usage graph from Drip0.5 into sIEve. - Mouseover event on graph to show graph history details - Added radio button to switch graph between Memory Usage and Dom Usage - 3 Update speeds and Paused.
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@117 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/sieve/src/sIEve.rc
+++ b/sieve/src/sIEve.rc
@@ -83,26 +83,27 @@ BEGIN
     LTEXT           "A&ddress:",IDC_ADDRESS_STATIC,40,9,28,8
     EDITTEXT        IDC_EDITURL,71,7,358,13,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "Go",IDC_GO,435,7,25,13
-    PUSHBUTTON      "about:blank",IDC_ABOUTBLANK,550,46,66,14
     PUSHBUTTON      "Auto-Refresh",IDC_AUTOREFRESH,466,7,54,13
-    CTEXT           "Memory samples (KB)             Registered Items (#)",IDC_MEMLABEL,529,93,163,8
-    CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",WS_TABSTOP,7,26,513,375
-    PUSHBUTTON      "Clear in use",IDC_CLEAR_IN_USE,626,7,66,14
-    PUSHBUTTON      "Show in use",IDC_SHOW_IN_USE,626,26,66,14
-    CONTROL         "",IDC_MEMSAMPLES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER,529,104,163,372,WS_EX_CLIENTEDGE
-    CONTROL         "Automatic memory cleanup",IDC_CHECK_AUTO_CLEANUP,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,550,78,98,10
-    PUSHBUTTON      "Show Leaks",IDC_SHOW_LEAKS,626,46,66,14
     PUSHBUTTON      "Help",IDC_SHOW_HELP,550,7,66,14
+    PUSHBUTTON      "Clear in use",IDC_CLEAR_IN_USE,626,7,66,14
     PUSHBUTTON      "Log Defect",IDC_LOG_DEFECT,550,26,66,14
-    GROUPBOX        "Memory Samples History",IDC_STATIC_HISTORY,7,408,513,68
-    LTEXT           "Static",IDC_STATIC_GRAPH,14,418,498,51,0,WS_EX_CLIENTEDGE
-    CONTROL         "Slow",IDC_RADIO_SLOW,"Button",BS_AUTORADIOBUTTON,407,408,27,10
-    CONTROL         "Fast",IDC_RADIO_FAST,"Button",BS_AUTORADIOBUTTON,440,408,26,10
-    CONTROL         "Paused",IDC_RADIO_PAUSED,"Button",BS_AUTORADIOBUTTON,469,408,36,10
-    CONTROL         "Max (MB)    ",IDC_STATIC_MAX,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,15,419,32,8
-    CONTROL         "Min (MB)     ",IDC_STATIC_MIN,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,15,459,32,8
+    PUSHBUTTON      "Show in use",IDC_SHOW_IN_USE,626,26,66,14
+    PUSHBUTTON      "about:blank",IDC_ABOUTBLANK,550,46,66,14
+    PUSHBUTTON      "Show Leaks",IDC_SHOW_LEAKS,626,46,66,14
     CONTROL         "Cycle Detection",IDC_CHECK_CYCLE_DETECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,550,67,67,10
     PUSHBUTTON      "Scan Now !",IDC_CROSSREF_SCAN,626,66,66,14
+    CONTROL         "Automatic memory cleanup",IDC_CHECK_AUTO_CLEANUP,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,550,78,98,10
+    CTEXT           "Memory Usage (KB)             DOM Usage (#nodes)",IDC_MEMLABEL,529,93,163,8
+    CONTROL         "",IDC_EXPLORER,"{8856F961-340A-11D0-A96B-00C04FD705A2}",WS_TABSTOP,7,26,513,375
+    CONTROL         "",IDC_MEMSAMPLES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER,529,104,163,372,WS_EX_CLIENTEDGE
+    GROUPBOX        "",IDC_STATIC_HISTORY,7,408,513,68
+    LTEXT           "Static",IDC_STATIC_GRAPH,14,418,498,51,0,WS_EX_CLIENTEDGE
+    CONTROL         "Memory Usage",IDC_RADIO_MEMORY_USAGE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,19,408,66,10
+    CONTROL         "DOM Usage",IDC_RADIO_DOM_USAGE,"Button",BS_AUTORADIOBUTTON,91,408,57,10
+    CONTROL         "High",IDC_RADIO_HIGH,"Button",BS_AUTORADIOBUTTON | WS_GROUP,367,408,31,10
+    CONTROL         "Normal",IDC_RADIO_NORMAL,"Button",BS_AUTORADIOBUTTON,400,408,34,10
+    CONTROL         "Low",IDC_RADIO_LOW,"Button",BS_AUTORADIOBUTTON,439,408,30,10
+    CONTROL         "Paused",IDC_RADIO_PAUSED,"Button",BS_AUTORADIOBUTTON,469,408,36,10
 END
 
 IDD_LEAKS DIALOGEX 500, 500, 688, 373
